--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ iframe {
   background: none;
   color: blanchedalmond;
   text-shadow: 0 0 3vh blanchedalmond;
-  border-radius: 15vh;
+  border-radius: 5vh 5vh 15vh 15vh;
   box-shadow: none;
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
@@ -485,7 +485,7 @@ iframe {
   }
 
   #homescreen {
-    border-radius: 100%;
+    border-radius: 50vw;
     box-shadow: 0 0 10vw rgba(222,184,135,0.1) inset;
     -webkit-box-shadow: 0 0 10vw rgba(222,184,135,0.1) inset;
     -moz-box-shadow: 0 0 10vw rgba(222,184,135,0.1) inset;
@@ -568,9 +568,9 @@ iframe {
   
   #login-one { margin: 9.5vw auto 0 auto; }
   
-  #login-two { margin: 42vw auto 0 auto; }
+  #login-two { margin: 40.5vw auto 0 auto; }
   
-  #you { margin: 42vw auto 0 auto }
+  #you { margin: 40.5vw auto 0 auto }
   
   #greeting {
     width: 95vw;
