--- a/style.css
+++ b/style.css
@@ -47,17 +47,28 @@ iframe {
   transition: 1s;
 }
 
-#homescreen {
+#homescreen,
+#login-screen {
   display: inherit;
   width: inherit;
   height: inherit;
   margin: 0 auto;
   grid-template-rows: repeat(4, 1fr);
-  background-color: rgba(17,17,17,0.3);
   border-radius: 100vh;
-  box-shadow: 0 0 10vh rgba(222,184,135,0.1) inset;
-  -webkit-box-shadow: 0 0 10vh rgba(222,184,135,0.1) inset;
-  -moz-box-shadow: 0 0 10vh rgba(222,184,135,0.1) inset;
+}
+
+#homescreen {
+  background-color: rgba(17,17,17,0.6);
+  box-shadow: 0 0 10vh rgba(222,184,135,0.2) inset;
+  -webkit-box-shadow: 0 0 10vh rgba(222,184,135,0.2) inset;
+  -moz-box-shadow: 0 0 10vh rgba(222,184,135,0.2) inset;
+}
+
+#login-screen {
+  background: none;
+  box-shadow: 0 0 10vh rgba(255,235,205,0.3) inset;
+  -webkit-box-shadow: 0 0 10vh rgba(255,235,205,0.3) inset;
+  -moz-box-shadow: 0 0 10vh rgba(255,235,205,0.3) inset;
 }
 
 #logo {
@@ -67,7 +78,7 @@ iframe {
   font-weight: bolder;
   text-align: center;
   color: blanchedalmond;
-  text-shadow: 0 0 2vh blanchedalmond;
+  text-shadow: 0 0 10rem blanchedalmond;
   opacity: 0;
   cursor: default;
   z-index: 666;
@@ -315,10 +326,9 @@ iframe {
   box-shadow: 0 0 2vh burlywood inset;
 }
 
-#horizon {
+#horizon,
+#glow-barrier {
   position: fixed;
-  top: 55.5vh;
-  width: 100%;
   height: 44.5vh;
   background-color: #222222;
   border: 0.5vh solid rgba(222,184,135,0.5);
@@ -326,6 +336,16 @@ iframe {
   border-right: none;
   border-radius: 5vh 5vh 10vh 10vh;
   opacity: 0.85;
+}
+
+#horizon {
+  width: 100%;
+  top: 55.5vh;
+}
+
+#glow-barrier {
+  width: 100vh;
+  top: 33vh;
 }
 
 #meow pre,
@@ -602,13 +622,22 @@ iframe {
     font-size: 24.25vw;
   }
 
-  #horizon {
-    top: 55.5vw;
+  #horizon,
+  #glow-barrier {
     height: 44.5vw;
     border: 0.5vw solid rgba(222,184,135,0.5);
     border-left: none;
     border-right: none;
     border-radius: 5vw 5vw 10vw 10vw;
+  }
+
+  #horizon {
+    top: 55.5vw;
+  }
+
+  #glow-barrier {
+    width: 95vw;
+    top: 68.5vw;
   }
 
   #anim-body {
