--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ iframe {
   margin: 0 auto;
   grid-template-rows: repeat(4, 1fr);
   border-radius: 100vh;
+  transition: 1000ms;
 }
 
 #homescreen {
@@ -390,18 +391,18 @@ iframe {
 .btn-group-active {
   background-color: burlywood;
   color: #222222;
-  box-shadow: 0 0 3.5vh burlywood;
-  -webkit-box-shadow: 0 0 3.5vh burlywood;
-  -moz-box-shadow: 0 0 3.5vh burlywood;
+  box-shadow: 0 0 3.5rem burlywood;
+  -webkit-box-shadow: 0 0 3.5rem burlywood;
+  -moz-box-shadow: 0 0 3.5rem burlywood;
 }
 
 .btn-group-inactive {
   background: none;
   color: burlywood;
-  text-shadow: 0 0 0.75vh burlywood;
-  box-shadow: 0 0 4.75vh burlywood inset;
-  -webkit-box-shadow: 0 0 4.75vh burlywood inset;
-  -moz-box-shadow: 0 0 4.75vh burlywood inset;
+  text-shadow: 0 0 0.75rem burlywood;
+  box-shadow: 0 0 4.75rem burlywood inset;
+  -webkit-box-shadow: 0 0 4.75rem burlywood inset;
+  -moz-box-shadow: 0 0 4.75rem burlywood inset;
 }
 
 .blink {
