--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 *:focus {
   outline: none;
 }
+
 html,
 body {
   min-width: 100vw;
@@ -18,10 +19,14 @@ body {
 body {
   background-color: #222222;
   line-height: 1.5em;
+  box-shadow: 0 0 35vh rgba(17,17,17,1) inset;
+  -webkit-box-shadow: 0 0 35vh rgba(17,17,17,1) inset;
+  -moz-box-shadow: 0 0 35vh rgba(17,17,17,1) inset;
 }
 
 iframe {
   border: none;
+  border-radius: 50%;
 }
 
 #device {
@@ -36,50 +41,59 @@ iframe {
 
 #container {
   display: grid; 
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
-  margin: -47.5vh 0 0 -50vh;
+  margin: -50vh 0 0 -50vh;
   width: 100vh;
-  height: 95vh;
+  height: 100vh;
+  background-image: none;
   text-align: center;
   grid-template-columns: repeat(3, 1fr);
-  transition: 1s;
+  transition: background-image 500s;
 }
 
 #homescreen,
 #login-screen {
-  display: inherit;
-  width: inherit;
-  height: inherit;
-  margin: 0 auto;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 95vh;
+  height: 95vh;
+  margin: -47.5vh 0 0 -47.5vh;
   grid-template-rows: repeat(4, 1fr);
-  border-radius: 100vh;
+  border-radius: 50vh;
   transition: 1000ms;
 }
 
 #homescreen {
   background-color: rgba(17,17,17,1);
-  box-shadow: 4vh 8vh 10vh rgba(222,184,135,0.35) inset;
-  -webkit-box-shadow: 4vh 8vh 10vh rgba(222,184,135,0.35) inset;
-  -moz-box-shadow: 4vh 8vh 10vh rgba(222,184,135,0.35) inset;
+  box-shadow: 4vh 8vh 7vh rgba(222,184,135,0.5) inset;
+  -webkit-box-shadow: 4vh 8vh 7vh rgba(222,184,135,0.5) inset;
+  -moz-box-shadow: 4vh 8vh 7vh rgba(222,184,135,0.5) inset;
 }
 
 #login-screen {
-  background: none;
+  background-color: #222222;
   box-shadow: -4vh 8vh 10vh rgba(255,235,205,0.3) inset;
   -webkit-box-shadow: -4vh 8vh 10vh rgba(255,235,205,0.3) inset;
   -moz-box-shadow: -4vh 8vh 10vh rgba(255,235,205,0.3) inset;
 }
 
 #logo {
-  margin: 20vh auto 0 auto;
+  position: fixed;
+  top: 33%;
+  left: 50%;
+  width: 95vh;
+  height: 15vh;
+  margin: -7.5vh 0 0 -47.5vh;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 14vh;
+  font-size: 13.5vh;
+  line-height: 13.5vh;
   font-weight: bolder;
   text-align: center;
-  color: blanchedalmond;
-  text-shadow: 0 0 10rem blanchedalmond;
+  color: rgba(255,235,205,1);
+  text-shadow: 0 0 2vh blanchedalmond;
   opacity: 0;
   cursor: default;
   z-index: 666;
@@ -87,13 +101,20 @@ iframe {
 }
 
 #author {
-  margin: 55vh auto 0 auto;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 4vh;
-  font-weight: lighter;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  position: fixed;
+  top: 47%;
+  left: 50%;
+  width: 26vh;
+  height: 10vh;
+  margin: -5vh 0 0 -13vh;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 3.5vh;
   text-align: center;
-  color: burlywood;
-  text-shadow: 0 0 1vh burlywood;
+  color: rgba(222,184,135,0.1);
+  text-shadow: 0 0 0.4vh rgba(222,184,135,1);
   opacity: 0;
   cursor: default;
   z-index: 420;
@@ -106,9 +127,11 @@ iframe {
 #reset,
 #logout {
   position: fixed;
+  left: 50%;
   height: 18vh;
-  width: inherit;
-  border: 0.65vh dotted burlywood;
+  width: 95vh;
+  margin: -9vh 0 0 -47.5vh;
+  border: 0.65vh dotted rgba(222,184,135,0.5);
   border-radius: 5vh 5vh 10vh 10vh;
   font-family: 'Courier New', Courier, monospace;
   font-size: 8vh;
@@ -121,21 +144,23 @@ iframe {
 }
 
 #one-player {
-  margin: 36vh auto 0 auto;
+  top: 64%;
   border-bottom: none;
   z-index: 2;
 }
 
 #two-player {
-  margin: 52vh auto 0 auto;
+  top: 80%;
   border-top: none;
   z-index: 1;
 }
 
 #login {
-  margin: 66vh auto 0 auto;
+  top: 78%;
+  width: 85.5vh;
+  margin: -9vh 0 0 -42.75vh;
   background: none;
-  color: blanchedalmond;
+  color: rgba(255,235,205,0.6);
   text-shadow: 0 0 3vh blanchedalmond;
   border-radius: 5vh 5vh 15vh 15vh;
   box-shadow: none;
@@ -144,13 +169,13 @@ iframe {
 }
 
 #reset {
-  margin: 57vh auto 0 auto;
+  top: 69%;
   border-bottom: none;
   z-index: 3;
 }
 
 #logout {
-  margin: 73vh auto 0 auto;
+  top: 85%;
   border-top: none;
   z-index: 2;
 }
@@ -162,8 +187,10 @@ iframe {
   -webkit-appearance: none;
   -moz-appearance: none;
   position: fixed;
+  left: 50%;
   height: 24vh;
-  width: 100vh;
+  width: 95vh;
+  margin: -12vh 0 0 -47.5vh;
   padding: 0 10vh;
   background: none;
   border-left: 4vh double blanchedalmond;
@@ -193,15 +220,19 @@ iframe {
   -moz-box-shadow: 0 0 10vh blanchedalmond inset;
 }
 
-#login-one { margin: 9.5vh auto 0 auto; }
+#login-one { top: 25%; }
 
-#login-two { margin: 37vh auto 0 auto; }
+#login-two { top: 52%; }
+
+#you { top: 52%; }
 
 #greeting {
   position: fixed;
-  width: 100vh;
+  top: 25%;
+  left: 50%;
+  width: 95vh;
   height: 24vh;
-  margin: 9.5vh auto 0 auto;
+  margin: -12vh 0 0 -47.5vh;
   padding: 9.5vh 4vh 7.5vh 4vh;
   font-family: 'Courier New', Courier, monospace;
   font-size: 5.5vh;
@@ -219,13 +250,13 @@ iframe {
   transition: 2s;
 }
 
-#you { margin: 37vh auto 0 auto }
-
 #message {
   position: fixed;
+  top: 55.5%;
+  left: 50%;
   width: 100vh;
   height: 5.75vh;
-  margin: 50.5vh auto 0 auto;
+  margin: -2.875vh 0 0 -50vh;
   background: none;
   color: blanchedalmond;
   font-size: 4.5vh;
@@ -236,7 +267,6 @@ iframe {
 
 #end {
   position: fixed;
-  display: grid;
   margin: 0 auto;
   width: inherit;
   height: inherit;
@@ -247,7 +277,7 @@ iframe {
 }
 
 [id^='cell-'] {
-  background: none;
+  background-color: rgba(17,17,17,1);
   color: inherit;
   border: 2px dotted burlywood;
   padding: 0;
@@ -255,7 +285,7 @@ iframe {
   cursor: pointer;
   outline: inherit;
   width: 33vh;
-  height: 31.5vh;
+  height: 33vh;
   margin: 0 auto;
   font-size: 24.25vh;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -318,8 +348,9 @@ iframe {
                               #111111,
                               #111111,
                               #222222,
-                              #222222,
-                              #222222)
+                              #111111,
+                              #111111,
+                              #111111)
                               no-repeat
                               fixed
                               center;
@@ -327,26 +358,20 @@ iframe {
   box-shadow: 0 0 2vh burlywood inset;
 }
 
-#horizon,
 #glow-barrier {
   position: fixed;
+  top: 72%;
+  left: 50%;
+  width: 90vh;
   height: 44.5vh;
+  margin: -22.25vh 0 0 -45vh;
   background-color: #222222;
   border: 0.5vh solid rgba(222,184,135,0.5);
   border-left: none;
   border-right: none;
   border-radius: 5vh 5vh 10vh 10vh;
   opacity: 0.85;
-}
-
-#horizon {
-  width: 100%;
-  top: 55.5vh;
-}
-
-#glow-barrier {
-  width: 100vh;
-  top: 33vh;
+  transition: 1s;
 }
 
 #meow pre,
@@ -391,18 +416,18 @@ iframe {
 .btn-group-active {
   background-color: burlywood;
   color: #222222;
-  box-shadow: 0 0 3.5rem burlywood;
-  -webkit-box-shadow: 0 0 3.5rem burlywood;
-  -moz-box-shadow: 0 0 3.5rem burlywood;
+  box-shadow: 0 0 5.25rem burlywood;
+  -webkit-box-shadow: 0 0 5.25rem burlywood;
+  -moz-box-shadow: 0 0 5.25rem burlywood;
 }
 
 .btn-group-inactive {
   background: none;
   color: burlywood;
   text-shadow: 0 0 0.75rem burlywood;
-  box-shadow: 0 0 4.75rem burlywood inset;
-  -webkit-box-shadow: 0 0 4.75rem burlywood inset;
-  -moz-box-shadow: 0 0 4.75rem burlywood inset;
+  box-shadow: 0 0 1.75rem burlywood inset;
+  -webkit-box-shadow: 0 0 1.75rem burlywood inset;
+  -moz-box-shadow: 0 0 1.75rem burlywood inset;
 }
 
 .blink {
@@ -438,7 +463,7 @@ iframe {
 
 .blackout {
   text-shadow: 0 0 40vh burlywood;
-  background-color: #111111;
+  background-color: rgba(34,34,34,0.2);
   transition: 1s;
 }
 
@@ -480,21 +505,30 @@ iframe {
 
 @media screen and (orientation: portrait) {
 
+  body {
+    box-shadow: 0 0 35vw rgba(17,17,17,1) inset;
+    -webkit-box-shadow: 0 0 35vw rgba(17,17,17,1) inset;
+    -moz-box-shadow: 0 0 35vw rgba(17,17,17,1) inset;
+  }
+
   #container {
-    margin: -50vw 0 0 -47.5vw;
-    width: 95vw;
+    margin: -50vw 0 0 -50vw;
+    width: 100vw;
     height: 100vw;
   }
 
   #homescreen,
   #login-screen {
-    border-radius: 100vh;
+    width: 95vw;
+    height: 95vw;
+    margin: -47.5vw 0 0 -47.5vw;
+    border-radius: 50vw;
   }
 
   #homescreen {
-    box-shadow: 4vw 8vw 10vw rgba(222,184,135,0.35) inset;
-    -webkit-box-shadow: 4vw 8vw 10vw rgba(222,184,135,0.35) inset;
-    -moz-box-shadow: 4vw 8vw 10vw rgba(222,184,135,0.35) inset;
+    box-shadow: 4vw 8vw 7vw rgba(222,184,135,0.5) inset;
+    -webkit-box-shadow: 4vw 8vw 7vw rgba(222,184,135,0.5) inset;
+    -moz-box-shadow: 4vw 8vw 7vw rgba(222,184,135,0.5) inset;
   }
   
   #login-screen {
@@ -504,15 +538,20 @@ iframe {
   }
 
   #logo {
-    margin: 20vw auto 0 auto;
-    font-size: 13vw;
+    width: 95vw;
+    height: 15vw;
+    margin: -7.5vw 0 0 -47.5vw;
+    font-size: 13.5vw;
+    line-height: 13.5vw;
     text-shadow: 0 0 2vw blanchedalmond;
   }
 
   #author {
-    margin: 55vw auto 0 auto;
-    font-size: 4vw;
-    text-shadow: 0 0 1vw burlywood;
+    width: 26vw;
+    height: 10vw;
+    margin: -5vw 0 0 -13vw;
+    font-size: 3.5vw;
+    text-shadow: 0 0 0.4vw rgba(222,184,135,1);
   }
 
   #one-player,
@@ -520,40 +559,43 @@ iframe {
   #login,
   #reset,
   #logout {
-    width: 95vw;
     height: 18vw;
-    border: 0.65vw dotted burlywood;
+    width: 95vw;
+    margin: -9vw 0 0 -47.5vw;
+    border: 0.65vw dotted rgba(222,184,135,0.5);
     border-radius: 5vw 5vw 10vw 10vw;
     font-size: 8vw;
   }
 
-  #one-player {
-    margin: 39vw auto 0 auto;
+  /* #one-player {
+    top: 20%;
   }
   
   #two-player {
-    margin: 55vw auto 0 auto;
-  }
+    top: 36%;
+  } */
   
   #login {
-    margin: 71vw auto 0 auto;
+    width: 85.5vw;
+    margin: -9vw 0 0 -42.75vw;
     text-shadow: 0 0 3vw blanchedalmond;
     border-radius: 5vw 5vw 15vw 15vw;
   }
   
-  #reset {
-    margin: 57vw auto 0 auto;
+  /* #reset {
+    top: 20%;
   }
   
   #logout {
-    margin: 73vw auto 0 auto;
-  }
+    top: 36%;
+  } */
   
   #login-one,
   #login-two,
   #you {
     height: 24vw;
     width: 95vw;
+    margin: -12vw 0 0 -47.5vw;
     padding: 0 10vw;
     border-left: 4vw double blanchedalmond;
     border-right: 1vw solid blanchedalmond;
@@ -578,16 +620,16 @@ iframe {
     -moz-box-shadow: 0 0 10vw blanchedalmond inset;
   }
   
-  #login-one { margin: 9.5vw auto 0 auto; }
+  /* #login-one { top: 20% }
   
-  #login-two { margin: 40vw auto 0 auto; }
+  #login-two { top: 40% }
   
-  #you { margin: 40vw auto 0 auto }
+  #you { top: 40% } */
   
   #greeting {
     width: 95vw;
     height: 24vw;
-    margin: 9.5vw auto 0 auto;
+    margin: -12vw 0 0 -47.5vw;
     padding: 9.5vw 4vw 7.5vw 4vw;
     font-size: 5.5vw;
     line-height: 5.5vw;
@@ -601,40 +643,30 @@ iframe {
   }
 
   #message {
-    margin: 49.5vw auto 0 auto;
-    width: 95vw;
+    width: 100vw;
     height: 5.75vw;
+    margin: -2.875vw 0 0 -50vw;
     font-size: 4.5vw;
   }
   
   [id^='cell-'] {
-    width: 31.5vw;
+    width: 33vw;
     height: 33vw;
-    margin: 0 auto;
     font-size: 24.25vw;
-  }
-
-  #horizon,
-  #glow-barrier {
-    height: 44.5vw;
-    border: 0.5vw solid rgba(222,184,135,0.5);
-    border-left: none;
-    border-right: none;
-    border-radius: 5vw 5vw 10vw 10vw;
-  }
-
-  #horizon {
-    top: 55.5vw;
-  }
-
-  #glow-barrier {
-    width: 95vw;
-    top: 68.5vw;
+    text-shadow: 0 0 1vw blanchedalmond;
   }
 
   #anim-body {
     border-radius: 50vw;
     box-shadow: 0 0 2vw burlywood inset;
+  }
+
+  #glow-barrier {
+    width: 90vw;
+    height: 44.5vw;
+    margin: -22.25vw 0 0 -45vw;
+    border: 0.5vw solid rgba(222,184,135,0.5);
+    border-radius: 5vw 5vw 10vw 10vw;
   }
 
   #meow pre {
