--- a/style.css
+++ b/style.css
@@ -98,7 +98,6 @@ iframe {
 }
 
 #login-screen {
-  background-color: #222222;
   box-shadow: -4vh 8vh 10vh rgba(255,235,205,0.3) inset;
   -webkit-box-shadow: -4vh 8vh 10vh rgba(255,235,205,0.3) inset;
   -moz-box-shadow: -4vh 8vh 10vh rgba(255,235,205,0.3) inset;
@@ -175,12 +174,12 @@ iframe {
 
 #login {
   position: relative;
-  top: 71.5%;
-  width: 85.5vh;
-  height: 18vh;
-  margin: 0 4.75vh;
-  border: 0.65vh dotted rgba(255,235,205,0.1);
-  border-radius: 5vh 5vh 15vh 15vh;
+  top: 70.5%;
+  width: 80.5vh;
+  height: 25vh;
+  margin: 0 7.25vh;
+  border: none;
+  border-radius: 5vh 5vh 50vh 50vh;
   font-family: 'Courier New', Courier, monospace;
   font-size: 8vh;
   text-shadow: 0 0 3vh blanchedalmond;
@@ -206,62 +205,58 @@ iframe {
   -webkit-appearance: none;
   -moz-appearance: none;
   position: absolute;
-  height: 24vh;
-  width: 95vh;
-  margin: 0 auto;
-  padding: 0 10vh;
+  height: 12vh;
+  width: 65vh;
+  margin: 0 15vh;
+  padding: 2.5vh 5vh;
   background: none;
-  border-left: 4vh double blanchedalmond;
-  border-right: 1vh solid blanchedalmond;
-  border-top: 0.6vh dashed rgba(222,184,135,0.5);
-  border-bottom: 0.8vh dashed rgba(222,184,135,0.5);
+  border: none;
+  border-left: 5vh solid rgba(222, 184, 135, 0.1);
   border-radius: 15vh;
-  font-size: 10vh;
+  font-size: 7.5vh;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   color: burlywood;
   text-shadow: 0 0 0.75vh burlywood;
-  box-shadow: 0 0 10vh burlywood inset;
-  -webkit-box-shadow: 0 0 10vh burlywood inset;
-  -moz-box-shadow: 0 0 10vh burlywood inset;
+  box-shadow: 0 0 10vh rgba(222,184,135,0.05) inset;
+  -webkit-box-shadow: 0 0 10vh rgba(222,184,135,0.05) inset;
+  -moz-box-shadow: 0 0 10vh rgba(222,184,135,0.05) inset;
   transition: 125ms;
 }
 
 #login-one:focus,
 #login-two:focus,
 #you:focus {
-  padding: 0;
-  padding-left: 5vh;
-  border-top: 0.6vh dashed rgba(255,235,205,0.5);
-  border-bottom: 0.8vh dashed rgba(255,235,205,0.5);
-  box-shadow: 0 0 10vh blanchedalmond inset;
-  -webkit-box-shadow: 0 0 10vh blanchedalmond inset;
-  -moz-box-shadow: 0 0 10vh blanchedalmond inset;
+  border-left: 0.75vh solid rgba(255, 235, 205, 0.3);
+  color: rgba(255,235,205,0.7);
+  box-shadow: 0 0 10vh rgba(222,184,135,0.1) inset;
+  -webkit-box-shadow: 0 0 10vh rgba(222,184,135,0.1) inset;
+  -moz-box-shadow: 0 0 10vh rgba(222,184,135,0.1) inset;
 }
 
-#login-one { top: 11%; }
+#login-one { top: 34.75%; }
 
-#login-two { top: 40%; }
+#login-two { top: 48.75%; }
 
-#you { top: 40%; }
+#you { top: 40.75%; }
 
 #greeting {
   position: absolute;
-  top: 11%;
+  top: 18%;
   width: 95vh;
-  height: 24vh;
+  height: 50vh;
   margin: 0 auto;
-  padding: 9.5vh 4vh 7.5vh 4vh;
+  padding: 5.5vh 4vh 7.5vh 4vh;
   font-family: 'Courier New', Courier, monospace;
-  font-size: 5.5vh;
-  line-height: 5.5vh;
+  font-size: 4.5vh;
+  line-height: 4.5vh;
   border: 1vh solid blanchedalmond;
   border-top: 0.5vh dotted rgba(222,184,135,0.5);
   border-bottom: 0.5vh dotted rgba(222,184,135,0.5);
   border-radius: 15vh;
   background: none;
-  box-shadow: 0.5vh 1vh 10.25vh burlywood inset;
-  -webkit-box-shadow: 0.5vh 1vh 10.25vh burlywood inset;
-  -moz-box-shadow: 0.5vh 1vh 10.25vh burlywood inset;
+  box-shadow: 7vh -11.5vh 15.25vh rgba(222,184,135,0.5) inset;
+  -webkit-box-shadow: 7vh -11.5vh 15.25vh rgba(222,184,135,0.5) inset;
+  -moz-box-shadow: 7vh -11.5vh 15.25vh rgba(222,184,135,0.5) inset;
   text-align: center;
   cursor: default;
   transition: 2s;
@@ -457,13 +452,21 @@ iframe {
 }
 
 .login-active {
-  background-color: rgba(255,235,205,0.1);
+  background: none;
   color: rgba(222,184,135,0.6);
 }
 
 .login-inactive {
   background: none;
   color: rgba(255,235,205,0.6);
+}
+
+.login-screen-active {
+  background-color: rgba(222,184,135,0.01);
+}
+
+.login-screen-inactive {
+  background-color: #222222;
 }
 
 .blink {
@@ -589,11 +592,10 @@ iframe {
   }
   
   #login {
-    width: 85.5vw;
-    height: 18vw;
-    margin: 0 4.75vw;
-    border: 0.65vw dotted rgba(255,235,205,0.1);
-    border-radius: 5vw 5vw 15vw 15vw;
+    width: 80.5vw;
+    height: 25vw;
+    margin: 0 7.25vw;
+    border-radius: 5vw 5vw 50vw 50vw;
     font-size: 8vw;
     text-shadow: 0 0 3vw blanchedalmond;
   }
@@ -601,46 +603,41 @@ iframe {
   #login-one,
   #login-two,
   #you {
-    height: 24vw;
-    width: 95vw;
-    margin: 0 auto;
-    padding: 0 10vw;
-    border-left: 4vw double blanchedalmond;
-    border-right: 1vw solid blanchedalmond;
-    border-top: 0.6vw dashed rgba(222,184,135,0.5);
-    border-bottom: 0.8vw dashed rgba(222,184,135,0.5);
+    height: 12vw;
+    width: 65vw;
+    margin: 0 15vw;
+    padding: 2.5vw 5vw;
+    border-left: 5vw solid rgba(222, 184, 135, 0.1);
     border-radius: 15vw;
-    font-size: 10vw;
+    font-size: 7.5vw;
     text-shadow: 0 0 0.75vw burlywood;
-    box-shadow: 0 0 10vw burlywood inset;
-    -webkit-box-shadow: 0 0 10vw burlywood inset;
-    -moz-box-shadow: 0 0 10vw burlywood inset;
+    box-shadow: 0 0 10vw rgba(222,184,135,0.05) inset;
+    -webkit-box-shadow: 0 0 10vw rgba(222,184,135,0.05) inset;
+    -moz-box-shadow: 0 0 10vw rgba(222,184,135,0.05) inset;
   }
   
   #login-one:focus,
   #login-two:focus,
   #you:focus {
-    padding-left: 5vw;
-    border-top: 0.6vw dashed rgba(255,235,205,0.5);
-    border-bottom: 0.8vw dashed rgba(255,235,205,0.5);
-    box-shadow: 0 0 10vw blanchedalmond inset;
-    -webkit-box-shadow: 0 0 10vw blanchedalmond inset;
-    -moz-box-shadow: 0 0 10vw blanchedalmond inset;
+    border-left: 0.75vw solid rgba(255, 235, 205, 0.3);
+    box-shadow: 0 0 10vw rgba(222,184,135,0.1) inset;
+    -webkit-box-shadow: 0 0 10vw rgba(222,184,135,0.1) inset;
+    -moz-box-shadow: 0 0 10vw rgba(222,184,135,0.1) inset;
   }
   
   #greeting {
     width: 95vw;
-    height: 24vw;
-    padding: 9.5vw 4vw 7.5vw 4vw;
-    font-size: 5.5vw;
-    line-height: 5.5vw;
+    height: 50vw;
+    padding: 5.5vw 4vw 7.5vw 4vw;
+    font-size: 4.5vw;
+    line-height: 4.5vw;
     border: 1vw solid blanchedalmond;
     border-top: 0.5vw dotted rgba(222,184,135,0.5);
     border-bottom: 0.5vw dotted rgba(222,184,135,0.5);
     border-radius: 15vw;
-    box-shadow: 0.5vw 1vw 10.25vw burlywood inset;
-    -webkit-box-shadow: 0.5vw 1vw 10.25vw burlywood inset;
-    -moz-box-shadow: 0.5vw 1vw 10.25vw burlywood inset;
+    box-shadow: 7vw -11.5vw 15.25vw rgba(222,184,135,0.5) inset;
+    -webkit-box-shadow: 7vw -11.5vw 15.25vw rgba(222,184,135,0.5) inset;
+    -moz-box-shadow: 7vw -11.5vw 15.25vw rgba(222,184,135,0.5) inset;
   }
 
   #message {
